--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,10 @@
     <title>My Rust CMS</title>
     <link data-trunk rel="css" href="src/styles/main.css">
     <link data-trunk rel="css" href="src/styles/admin.css">
+    <link data-trunk rel="css" href="src/styles/markdown.css">
+    <link data-trunk rel="css" href="src/styles/page_builder.css">
+    <link data-trunk rel="css" href="src/styles/enhanced_page_builder.css">
+    <link data-trunk rel="css" href="src/styles/media_library.css">
 </head>
 <body>
     <div id="root"></div>
