✨ Enhance page builder components and fix contrast issues
🎨 Improvements:
- Fixed dark font color on dark background contrast issues across all CSS files
- Added comprehensive dark mode support to page_builder.css and main.css
- Updated component default styles (inherit colors, modern border radius)
- Enhanced all 18 page builder components with rich, professional content
- Improved post navigation with proper Yew router integration
- Created sample blog posts showcasing CMS capabilities

🚀 Features:
- Hero sections with compelling CTAs
- Two/Three column layouts with feature comparisons
- Professional testimonials and quotes
- Rich text content with emojis and markdown
- Contact forms and newsletter signups
- Technical deep-dive content with performance metrics

🔧 Technical:
- Better theme compatibility with 'inherit' text colors
- Enhanced form visibility in dark mode
- Improved button styling for light/dark themes
- Navigation callbacks for seamless SPA routing
- Professional sample content in database

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Rust CMS</title>
     <link data-trunk rel="css" href="src/styles/main.css">
+    <link data-trunk rel="css" href="src/styles/public.css">
     <link data-trunk rel="css" href="src/styles/admin.css">
     <link data-trunk rel="css" href="src/styles/markdown.css">
     <link data-trunk rel="css" href="src/styles/page_builder.css">
