--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <link data-trunk rel="css" href="src/styles/page_builder.css">
     <link data-trunk rel="css" href="src/styles/enhanced_page_builder.css">
     <link data-trunk rel="css" href="src/styles/media_library.css">
+    <link data-trunk rel="css" href="src/styles/design_system.css">
 </head>
 <body>
     <div id="root"></div>
