Enhance navigation system and add template manager
- Add multi-menu navigation support with database migration
- Implement template manager functionality in admin interface
- Update navigation controller, models, and schema
- Enhance frontend navigation components and services
- Add mobile menu styling and admin interface improvements
- Update public layout with improved navigation handling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     <link data-trunk rel="css" href="src/styles/page_builder.css">
     <link data-trunk rel="css" href="src/styles/enhanced_page_builder.css">
     <link data-trunk rel="css" href="src/styles/media_library.css">
+    <link data-trunk rel="css" href="src/styles/mobile_menu.css">
+    <link data-trunk rel="css" href="src/styles/template_manager.css">
 </head>
 <body>
     <div id="root"></div>
